add record db roles,users,customers and fix clean up