@@ -11,48 +11,47 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @AllArgsConstructor
 @Service
 public class TicketTypeService implements ITicketTypeService {
 
-
     private final ITicketTypeRepository ticketTypeRepository;
-
-
-
     @Override
     public List<TicketTypeRequestDTO> getAllTicketType() {
-        Iterable<TicketType> tickets = ticketTypeRepository.findAll();
+        Iterable<TicketType> ticketTypes = ticketTypeRepository.findAll();
 
-        return StreamSupport.stream(tickets.spliterator(), true)
+        return StreamSupport.stream(ticketTypes.spliterator(), true)
+                .filter(ticketType -> !ticketType.getIsDelete())
                 .map(ticketType -> {
-                    TicketTypeRequestDTO ticketTypeRequestDTO =  TicketTypeRequestDTO.builder().build();
+                    TicketTypeRequestDTO ticketTypeRequestDTO = TicketTypeRequestDTO.builder().build();
                     BeanUtils.copyProperties(ticketType, ticketTypeRequestDTO);
                     return ticketTypeRequestDTO;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
     }
 
     @Override
     public TicketTypeResponseDTO getTicketTypeById(UUID id) {
         TicketType ticketType = ticketTypeRepository.findById(id).orElse(null);
-        TicketTypeResponseDTO ticketTypeResponseDTO1 =  TicketTypeResponseDTO.builder().build();
+        TicketTypeResponseDTO ticketTypeResponseDTO = TicketTypeResponseDTO.builder().build();
         assert ticketType != null;
-        BeanUtils.copyProperties(ticketType,ticketTypeResponseDTO1);
-        return ticketTypeResponseDTO1;
+        if (Boolean.FALSE.equals(ticketType.getIsDelete())) {
+            BeanUtils.copyProperties(ticketType, ticketTypeResponseDTO);
+            return ticketTypeResponseDTO;
+        }
+        return null;
     }
 
     @Override
     public TicketTypeRequestDTO createTicketType(TicketTypeRequestDTO ticketTypeRequestDTO) {
         TicketType ticketType = new TicketType();
-        BeanUtils.copyProperties(ticketTypeRequestDTO,ticketType);
+        BeanUtils.copyProperties(ticketTypeRequestDTO, ticketType);
         ticketType = ticketTypeRepository.save(ticketType);
-        TicketTypeRequestDTO resultTicketRequestDTO =  TicketTypeRequestDTO.builder().build();
-        BeanUtils.copyProperties(ticketType,resultTicketRequestDTO);
+        TicketTypeRequestDTO resultTicketRequestDTO = TicketTypeRequestDTO.builder().build();
+        BeanUtils.copyProperties(ticketType, resultTicketRequestDTO);
 
         return resultTicketRequestDTO;
     }
@@ -69,7 +68,7 @@ public class TicketTypeService implements ITicketTypeService {
     public void updateTicketType(TicketTypeResponseDTO ticketTypeResponseDTO) {
         TicketType ticketType = ticketTypeRepository.findById(ticketTypeResponseDTO.getId()).orElse(null);
         assert ticketType != null;
-        BeanUtils.copyProperties(ticketTypeResponseDTO,ticketType);
+        BeanUtils.copyProperties(ticketTypeResponseDTO, ticketType);
 
         ticketTypeRepository.save(ticketType);
     }
